--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Week 5 Assignment</title>
+
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
       <header>
           <h1>Week 5 Assignment - Part 2</h1>
-          <hr>
+          <br>
           <h2>David's Record Shop</h2>
       </header>
       <main>
