--- a/assignment/index.html
+++ b/assignment/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <header>
-          <h1>Week 5 Assignment - Part 2</h1>
+          <h1 class="heading" >Week 5 Assignment - Part 2</h1>
           <br>
           <h2>David's Record Shop</h2>
       </header>
