Added classes to stylesheet instead of element names

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <title>Week 5 Assignment</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-      <header>
+      <header class="header-el" >
           <h1 class="heading" >Week 5 Assignment - Part 2</h1>
           <br>
           <h2>David's Record Shop</h2>
       </header>
-      <main>
+      <main class="main-content">
           <p>See console for output.</p>
       </main>
     <!-- Create an unordered list with any questions you have -->
